--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -2,12 +2,12 @@
     You Tube Videos
 </h1>
 <hr>
-<div class="row row-cols-1 row-cols-md-4 g-4">
+<div class="row row-cols-1 row-cols-md-2 row-cols-lg-4 g-4">
     <div *ngFor='let video of videos' class="col">
         <div class="card animate__animated animate__fadeIn">
             <img [src]="video.thumbnails.high.url" class="card-img-top" [alt]="video.title">
             <div class="card-body">
-                <h5 class="card-title">{{ video.title }}</h5>
+                <p class=""><strong>{{ video.title }}</strong></p>
                 <p class="card-text">
                     <strong>Autor: </strong>{{ video.channelTitle }}
                 </p>
@@ -22,9 +22,14 @@
     </div>
 </div>
 <div class="row mt-5 mb-5 text-center ">
+    <div *ngIf='hayAtras' class="col">
+        <button (click)="cargarVideos('atras')" class="btn btn-outline-dark animate__animated animate__fadeIn">
+            < Previos
+        </button>
+    </div>
     <div class="col">
-        <button (click)='cargarVideos()' class="btn btn-info btn-lg">
-            Pagina siguiente
+        <button (click)="cargarVideos('adelante')" class="btn btn-outline-dark animate__animated animate__fadeIn">
+            Siguientes >
         </button>
     </div>
 </div>
